--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -192,8 +192,8 @@
         <div class="Knavbar">
             <ul>
                 <li><span>홈</span></li>
-                <li><span>커뮤니티</span></li>
-                <li><span>커뮤니티</span></li>
+                <li><span>전공</span></li>
+                <li><span>직무</span></li>
                 <li><span>멘토링</span></li>
             </ul>
         </div>
@@ -405,6 +405,14 @@
             <h3>👉</h3>
         </button>
     </div>
+    <footer>
+        <br>
+        <br>
+        <br>
+        <dt>©2022 by Hype-girl</dt><br/>
+        <dd>2022 1st IT Engineering Alliance Hackathon </dd><br/>
+        <dd class="event">Draw forth Synergy</dd>
+    </footer>
 
 </main>
 </body>
